Styles for pairing

--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -28,3 +28,9 @@
   font-weight: 800;
   src: local('Open Sans Extrabold'), local('OpenSans-Extrabold'), url(http://themes.googleusercontent.com/static/fonts/opensans/v8/EInbV5DfGHOiMmvb1Xr-hqRDOzjiPcYnFooOUGCOsRk.woff) format('woff');
 }
+
+
+body {
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial;
+  font-size: 62.5%;
+}
