--- a/app/views/header.html
+++ b/app/views/header.html
@@ -12,9 +12,9 @@
            <h1><img src="/images/logo-white.png" alt="Nina" /> Ninja <span>Sphere</span> </h1>
         </a>
     </div>
-    <ul class="nav navbar-nav pull-right">
-
-    </ul>
+    <div class="pull-right">
+      <div class="item" ng-if="User.name"><span>{{ User.name }}</span></div>
+    </div>
   </div>
 </header>
 <!-- end navbar -->
