--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -448,8 +448,8 @@ input.search{
 	margin-left: 177px;
 	border-left: 1px solid #dae3e9;
 	border-bottom: 1px solid #dae3e9;
-	box-shadow: -3px 3px 3px -2px #f1f1f3;
 	border-radius: 0px 0px 0px 5px;
+	z-index: 1;
 
 	-webkit-transition: margin-left .3s ease;
 	-moz-transition: margin-left .3s ease;
@@ -536,6 +536,33 @@ input.search{
 	/* end skin changer*/
 }
 
+
+.container {
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+	min-width: 320px;
+}
+.container:before, .container:after {
+  content: " ";
+  display: table;
+}
+.container:after {
+  clear: both;
+}
+@media (min-width: 768px) {
+  .container {
+    width: 750px; }
+}
+@media (min-width: 992px) {
+  .container {
+    width: 970px; }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px; }
+}
 
 
 /* responsive */
