--- a/app/styles/_sphere.scss
+++ b/app/styles/_sphere.scss
@@ -1,42 +1,84 @@
 
 html {
   background-color: hsl(214,48%,14%);
+  font-family: 'Open Sans';
 }
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: 'Open Sans';
+  font-weight: 800px;
+}
+
 h4 {
+  font-size: 2em;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 700;
   color: black;
   text-transform: uppercase;
 }
 
+a {
+  text-decoration: none;
+}
 
-.navbar {
-  margin-bottom: 0px;
+.pull-right {
+  float: right;
+}
 
-  .navbar-brand {
-    padding: 8px 20px;
+$headerHeight: 50px;
+header {
 
-    h1 {
-      font-weight: 600;
-      font-size: 22px;
-      color: #EEE;
+  &.navbar {
+    height: $headerHeight;
+    margin-bottom: 0px;
 
-      span {
-        font-weight: 300;
+    .navbar-header {
+      height: $headerHeight;
+      display: inline-block;
+    }
+
+    .navbar-brand {
+      // padding: 8px 20px;
+      display: inline-block;
+
+      a { color: transparent; }
+
+      h1 {
+        font-weight: 600;
+        font-size: 22px;
+        color: #EEE;
+        text-transform: uppercase;
+        text-decoration: none;
+        color: white;
+        line-height: $headerHeight;
+
+        span {
+          font-weight: 300;
+        }
+
+        img {
+          width: 25px;
+          margin-right: 0.4em;
+          vertical-align: middle;
+        }
       }
     }
-    img {
-      width: 25px;
-      margin-right: 0.4em;
+
+    .pull-right {
+
+      .item {
+        height: 100%;
+        color: #CCC;
+        line-height: 50px;
+
+        span {
+          font-weight: 700;
+        }
+      }
     }
   }
-}
 
-// BLE Device icon
-.navbar-inverse .pop-dialog .notifications .item > i {
-  color: hsl(269,57%,69%) !important;
 }
-
 
 #pad-wrapper h4 {
   color: inherit;
@@ -65,5 +107,41 @@ h4 {
         font-weight: 300;
       }
     }
+  }
+}
+
+
+
+.pair {
+  text-align: center;
+  padding-top: 3em;
+
+
+  form {
+    margin: 1em 0;
+  }
+
+  label {
+    text-align: center;
+    display: block;
+  }
+  input {
+    text-align: center;
+    max-width: 300px;
+    margin: 0 auto 0.5em;
+    display: block;
+    text-transform: uppercase;
+
+  }
+  .btn {
+    margin: 0 auto;
+  }
+
+  .error {
+    color: hsl(360,45%,48%);
+    font-weight: 600;
+    font-size: 0.9em;
+    line-height: 1.7em;
+    margin: 0 0 1em;
   }
 }
