--- a/app/styles/_sphere.scss
+++ b/app/styles/_sphere.scss
@@ -1,6 +1,6 @@
 
 html {
-  background-color: hsl(214,48%,14%);
+  background-color: hsl(214,0%,97%);
   font-family: 'Open Sans';
 }
 
@@ -143,5 +143,28 @@ header {
     font-size: 0.9em;
     line-height: 1.7em;
     margin: 0 0 1em;
+  }
+
+  .nodes {
+    margin: 3em auto;
+    max-width: 260px;
+    padding: 2em 0 0;
+
+    .node {
+      width: 100%;
+      line-height: 1.7em;
+      clear: both;
+      text-align: left;
+      margin: 0 0 1em;
+    }
+
+    $btnColor: hsl(360,82%,41%);
+    .btn {
+      padding: 0em 0.4em;
+      font-size: 0.9em;
+      float: right;
+      background-color: $btnColor;
+      border-color: darken($btnColor, 10%);
+    }
   }
 }
