--- a/app/views/modalnodedelete.html
+++ b/app/views/modalnodedelete.html
@@ -1,5 +1,5 @@
 <h3>Delete {{ ngDialogData.name }}?</h3>
-<p>Do you really want to delete node <strong>"{{ ngDialogData.name }}"</strong></p>
+<p>Do you really want to delete node <strong>"{{ ngDialogData.name || ngDialogData.node_id }}"</strong></p>
 
 <div class="btn orange" hm-tap="closeThisDialog()">Cancel</div>
 <div class="absolute-left">
