Add account + logout links.

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -56,6 +56,18 @@ header{
 }
 
 /* Custom navbar stuff */
+.navbar {
+	.pull-right {
+		> .item {
+			margin: 0 8px;
+
+			&:hover {
+				color: white;
+			}
+		}
+	}
+}
+
 
 /* search input */
 .navbar-inverse {
