Fix user nav links

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -13,8 +13,8 @@
         </a>
     </div>
     <div class="pull-right">
-      <a class="item" href="{{ AccountLink }}" ng-if="User.name"><span>{{ User.name }}</span></a>
-      <a class="item" href="{{ LogoutLink }}" ng-if="User.name"><span>Logout</span></a>
+      <a class="item" ng-href="{{AccountLink }}" ng-if="User.name"><span>{{ User.name }}</span></a>
+      <a class="item" ng-href="{{ LogoutLink }}" ng-if="User.name"><span>Logout</span></a>
     </div>
   </div>
 </header>
